--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
+  "version": 2,
   "functions": {
     "api/main.py": {
-      "runtime": "python3.9"
+      "runtime": "python3.12"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/main.py" }
+    {
+      "src": "/(.*)",
+      "dest": "/api/main.py"
+    }
   ]
 }
