Made runtime used another format which might work

--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
   "version": 2,
   "functions": {
     "api/main.py": {
-      "runtime": "python3.12"
+      "runtime": "@vercel/python@3.12"
     }
   },
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/(.*)", 
       "dest": "/api/main.py"
     }
   ]
