--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
-  "version": 2,
-  "functions": {
-    "api/main.py": {
-      "runtime": "@vercel/python@3.12"
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
-      "src": "/(.*)", 
-      "dest": "/api/main.py"
+      "src": "/(.*)",
+      "dest": "main.py"
     }
   ]
 }
